--- a/puddl/item/templates/item/detail.html
+++ b/puddl/item/templates/item/detail.html
@@ -1,14 +1,13 @@
 {% extends 'core/base.html'%}
 
 {% block title %}
-{
-    {item.name}
-}
-{%endblock%} 
+{{ item.name}}
+{% endblock %} 
+
 {% block content %}
 <div class="grid grid-cols-5 gap-6">
     <div class="col-span-3">
-        <img src="{{ item.image.url}}"  class="rounded-xl">
+        <img src="{{ item.image.url }}"  class="rounded-xl">
     </div>
     <div class="col-span-2 bg-gray-100 rounded-xl">
         <h1 class="mb-6 text-3xl">{{ item.name}}</h1>
