--- a/puddl/core/templates/core/index.html
+++ b/puddl/core/templates/core/index.html
@@ -5,7 +5,7 @@ Welcome
 {% endblock %} 
 
 {% block content%}
-<div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
+<div class="mt-6 px-6 py-12 bg-teal-100 rounded-xl">
     <h2 class="mb-12 text-2xl text-center">Newest Items</h2>
     <div class="grid grid-cols-3 gap-3">
         {% for item in items %}
