--- a/puddl/core/templates/core/login.html
+++ b/puddl/core/templates/core/login.html
@@ -2,7 +2,7 @@
 
 {% block title%}Log In{% endblock %}
 {% block content%}
-<div class="w-1/2 my-6 p-6 mx-auto bg-gray-100 rounded-xl ">
+<div class="w-1/2 my-6 p-6 mx-auto bg-teal-100 rounded-xl ">
     <h1 class="mb-6 text-3xl">Login</h1>
 
     <form method="post" action=".">
