--- a/puddl/item/templates/item/detail.html
+++ b/puddl/item/templates/item/detail.html
@@ -5,11 +5,11 @@
 {% endblock %} 
 
 {% block content %}
-<div class="grid grid-cols-5 gap-6">
+<div class="grid grid-cols-5 gap-6 bg-teal-100">
     <div class="col-span-3">
         <img src="{{ item.image.url }}"  class="rounded-xl">
     </div>
-    <div class="col-span-2 bg-gray-100 rounded-xl">
+    <div class="col-span-2 bg-teal-100 rounded-xl">
         <h1 class="mb-6 text-3xl">{{ item.name}}</h1>
         <p class="text-gray-500"><strong>Price:</strong>{{ item.price }}</p>
         <p class="text-gray-500"><strong>Seller:</strong>{{ item.created_by.username }}</p>
@@ -30,7 +30,7 @@
     </div>
     
 </div>
-<div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
+<div class="mt-6 px-6 py-12 bg-teal-100 rounded-xl">
     <h2 class="mb-12 text-2xl text-center">Related Items</h2>
     <div class="grid grid-cols-3 gap-3">
         {% for item in related_items %}
