--- a/puddl/item/templates/item/items.html
+++ b/puddl/item/templates/item/items.html
@@ -25,7 +25,13 @@ Items List
            </li>
         {% endfor %}
       </ul>
+      <hr class="my-6">
 
+      <p class="font-semibold">Clear Filters</p>
+      <ul>
+        <li><a href="{% url 'item:items' %}" class="mt-2 py-4 px-8 inline-block bg-yellow-500 text-lg rounded-xl text-white  ">Reset</a>
+        </li>
+      </ul>
     </div>
     <div class="col-span-3">
         <div class="grid grid-cols-3 gap-3">
